force-app/main/default/objects/FEC_Notification_History__c/FEC_Notification_History__c.object-meta.xml
<CustomObject>
    <label>Notification History</label>
    <nameField>
        <displayFormat>NHN - {0}</displayFormat>
        <label>Notification History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>