force-app/main/default/objects/FEC_Notification_History__c/fields/FEC_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case_ID__c</fullName>
    <label>Case ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>