force-app/main/default/objects/FEC_Notification_History__c/fields/FEC_Notification__c.field-meta.xml
<CustomField>
    <fullName>FEC_Notification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notification</label>
    <referenceTo>FEC_Notification__c</referenceTo>
    <relationshipLabel>Notification History</relationshipLabel>
    <relationshipName>Notification_History</relationshipName>
    <type>Lookup</type>
</CustomField>