force-app/main/default/objects/FEC_Notification_History__c/fields/FEC_Notification_Channel__c.field-meta.xml
<CustomField>
    <fullName>FEC_Notification_Channel__c</fullName>
    <label>Notification Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>