force-app/main/default/objects/FEC_Notification_History__c/fields/FEC_Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Notification_Type__c</fullName>
    <description>Tên mẫu thông báo đã gửi tại stage</description>
    <label>Notification Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>