force-app/main/default/objects/FEC_Notification_History__c/fields/FEC_Send_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>FEC_Send_Date_Time__c</fullName>
    <label>Send Date Time</label>
    <type>DateTime</type>
</CustomField>