force-app/main/default/objects/FEC_Notification_History__c/fields/FEC_Send_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Send_Status__c</fullName>
    <label>Sent Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>