force-app/main/default/objects/FEC_Notification_History__c/fields/FEC_Send_System__c.field-meta.xml
<CustomField>
    <fullName>FEC_Send_System__c</fullName>
    <label>Send System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>