force-app/main/default/objects/FEC_Notification_History__c/fields/FEC_Send_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Send_Type__c</fullName>
    <label>Send Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>