force-app/main/default/objects/FEC_Notification_History__c/fields/FEC_Send_User__c.field-meta.xml
<CustomField>
    <fullName>FEC_Send_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Send User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Notification_History</relationshipName>
    <type>Lookup</type>
</CustomField>