force-app/main/default/objects/FEC_Notification_History__c/fields/FEC_Target_Group__c.field-meta.xml
<CustomField>
    <fullName>FEC_Target_Group__c</fullName>
    <description>Nhóm người nhận thông báo</description>
    <label>Target Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>