force-app/main/default/objects/FEC_Notification_History__c/fields/FEC_User__c.field-meta.xml
<CustomField>
    <fullName>FEC_User__c</fullName>
    <label>User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>